# e-uae

./: README  Readme.txt  build.sh  confdefs.h  config.sub  configure  configure.in
android/: AndroidAppSettings.cfg  AndroidBuild.sh  euae  euae-x86
autom4te.cache/: output.0  traces.0
data/: .uaerc
data/configurations/: Amiga 1200 3.1 68020 AGA 2Mb 8Mb.uae  Amiga 1200 3.1 68020 AGA 2Mb.uae  Amiga 500 1.3 68000 OCS 1Mb.uae  Amiga 600 2.04 68000 ECS 1Mb.uae
src/: Makefile.am  Makefile.in  Makefile.in~  Makefile~  akiko.c  ar.c  audio.c  autoconf.c  blitter.c  blkdev-libscg.c  blkdev.c  bsdsocket-posix-new.c  bsdsocket.c  catweasel.c  cfgfile.c~  cia.c  compemu_fpp.c  compemu_support.c  custom.c  debug.c  disk.c  drawing.c  enforcer.c  enforcer.c~  ersatz.c  expansion.c  filesys.c  fpp.c  fsdb.c  fsdb_unix.c  fsdb_unix.c~  genblitter.c  gencomp.c  gencpu.c  hardfile.c  identify.c  inputdevice.c  main.c  main.c~  memory.c  (+12 more)
src/gfx-sdl/: sdlgfx.c
src/gfx-svga/: svga.c
src/gfx-x11/: xwin.c
src/gui-gtk/: gtkui.c
src/gui-guichan/: Makefile.am  Makefile.in  guichan-gui.cpp  guichan-gui.cpp~  menuAddEditHdd.cpp  menuChipset.cpp  menuConfig.cpp  menuControl.cpp  menuCpuFpu.cpp  menuCustom.cpp  menuDisplay.cpp  menuFloppy.cpp  menuHdd.cpp  menuLoad_guichan.cpp  menuMessage.cpp  menuOnScreen.cpp  menuPaths.cpp  menuRam.cpp  menuRom.cpp  menuSaveState.cpp  menuSound.cpp  rw_config.h
src/gui-muirexx/: ami-rexx.c
src/include/: gui.h  hrtimer.h~  memory-uae.h  options.h~
src/jd-linuxold/: joystick.c
src/jd-none/: joystick.c
src/md-generic/: Makefile~  rpt.h~  (+1 more)
(+11 files in other folders)
